v18.2/9.公式引用/0.公式概述/1.公式中的单元格引用/0.使用单元格引用.md
# use-cell-references

SpreadJS 允许您通过使用单元格引用来执行各种操作。

## 将表达式转换为公式

您可以使用 [expressionToFormula ](gcdocsite__documentlink?toc-item-id=3db14618-6aaf-4198-b174-826a09082d17#expressionToFormula)方法将表达式转换为公式。

```JavaScript
var spread = new GC.Spread.Sheets.Workbook(document.getElementById('ss'), { sheetCount: 1 });
sheet = spread.getSheet(0);
sheet.setValue(0, 0, 1);
sheet.setValue(0, 1, 2);
sheet.setValue(0, 2, 3);
sheet.addCustomName('customName1', '=12', 0, 0);
sheet.addCustomName('customName2', 'Average(20,45)', 0, 0);
sheet.addCustomName('customName3', '=$A$1:$C$1');
sheet.setFormula(1, 0, 'customName1');
sheet.setFormula(1, 1, 'customName2');
sheet.setFormula(1, 2, 'sum(customName3)');
var cname = sheet.getCustomName('customName2');
if (cname instanceof GC.Spread.Sheets.NameInfo) {
    // 获取自定义名称
    var name = cname.getName();
    // 获取表达式
    var expression = cname.getExpression();
    // 获取表达式字符串
    var expStr = GC.Spread.Sheets.CalcEngine.expressionToFormula(sheet, expression, 0, 0);
    console.log('名称: ' + name + ' ; 表达式: ' + expStr);
}
```

## 将公式转换为表达式

您可以使用 [formulaToExpression ](gcdocsite__documentlink?toc-item-id=3db14618-6aaf-4198-b174-826a09082d17#formulaToExpression)方法将公式转换为表达式。

```JavaScript
var spread = new GC.Spread.Sheets.Workbook(document.getElementById('ss'), { sheetCount: 1 });
sheet = spread.getSheet(0);
sheet.setValue(0, 0, 1);
sheet.setValue(0, 1, 2);
sheet.setValue(0, 2, 3);
sheet.getCell(4, 4).formula('=SUM(A1:C1)');
var formula = sheet.getFormula(4, 4);
var expression = GC.Spread.Sheets.CalcEngine.formulaToExpression(sheet, formula, 0, 0);
console.log('函数名称是: ' + expression.functionName);
```

## 将公式转换为区域

您可以使用 [formulaToRanges ](gcdocsite__documentlink?toc-item-id=3db14618-6aaf-4198-b174-826a09082d17#formulaToRanges)方法将公式字符串转换为指定的单元格区域。

```JavaScript
var spread = new GC.Spread.Sheets.Workbook(document.getElementById('ss'), { sheetCount: 1 });
sheet = spread.getSheet(0);
// 使用 formulaToRanges() 方法创建单元格区域
cellRanges = GC.Spread.Sheets.CalcEngine.formulaToRanges(sheet, 'B3:D5', 0, 0);
// 获取公式中区域的行/列索引以及行数/列数
console.log("单元格区域 'B3:D5' 的起始行索引是 " + cellRanges[0].ranges[0].row);
console.log("单元格区域 'B3:D5' 的起始列索引是 " + cellRanges[0].ranges[0].col);
console.log("单元格区域 'B3:D5' 的行数是 " + cellRanges[0].ranges[0].rowCount);
console.log("单元格区域 'B3:D5' 的列数是 " + cellRanges[0].ranges[0].colCount);
```

# 计算公式

您可以使用 [evaluateFormula](gcdocsite__documentlink?toc-item-id=3db14618-6aaf-4198-b174-826a09082d17#evaluateFormula) 方法来计算公式。

```JavaScript
var spread = new GC.Spread.Sheets.Workbook(document.getElementById('ss'), { sheetCount: 1 });
var sheet = spread.getSheet(0);
sheet.setValue(0, 0, 1); // 在单元格(0,0)中设置值1
sheet.setValue(1, 0, 2); // 在单元格(1,0)中设置值2
// 使用 EvaluateFormula() 方法，无需在工作表单元格中设置公式即可计算公式
var result = GC.Spread.Sheets.CalcEngine.evaluateFormula(sheet, 'SUM(A1:A2)', 0, 0);
console.log('SUM(A1:A2) = ' + result); // 输出结果：SUM(A1:A2) = 3
```

您可以使用 [evaluateFormulaAsync](https://docs.grapecity.com.cn/spreadjs/help/api/modules/GC.Spread.Sheets.CalcEngine#evaluateformulaAsync) 方法异步计算公式。
首先，定义一个简单的自定义异步函数 `ASUM`（异步求和），该函数使用 `setTimeout` 模拟延迟；然后，使用 `evaluateFormulaAsync()` 方法异步计算公式，无需在工作表单元格中设置该公式。

```javascript
// 定义异步函数 ASUM
var asyncSum = function () {};
// 继承 AsyncFunction，指定函数名"ASUM"，参数数量范围为1到255
asyncSum.prototype = new GC.Spread.CalcEngine.Functions.AsyncFunction("ASUM", 1, 255);

// 计算等待期间显示的默认值
asyncSum.prototype.defaultValue = function () {
    return "加载中...";
};

// 异步计算逻辑
asyncSum.prototype.evaluateAsync = function (context) {
    // 使用 setTimeout 模拟2秒的服务端计算延迟
    var args = arguments;
    setTimeout(function () {
        var result = 0;
        // 参数从索引1开始（索引0为context对象）
        for (var i = 1; i < args.length; i++) {
            result += args[i];
        }
        // 使用提供的context对象设置最终结果（示例：将求和结果翻倍）
        context.setAsyncResult(result * 2);
    }, 2000); // 模拟2秒延迟
};

// 全局注册自定义函数
GC.Spread.CalcEngine.Functions.defineGlobalCustomFunction("ASUM", new asyncSum());

// 异步函数基础用法：
var spread = new GC.Spread.Sheets.Workbook(document.getElementById('ss'), { sheetCount: 1 });
var sheet = spread.getSheet(0);
sheet.setValue(0, 0, 1); // 在单元格(0,0)中设置值1
sheet.setValue(1, 0, 2); // 在单元格(1,0)中设置值2

// 使用 evaluateFormulaAsync() 方法
GC.Spread.Sheets.CalcEngine.evaluateFormulaAsync(sheet, "ASUM(2, 2)", 0, 0)
    .then(result => {
        console.log("ASUM(2, 2) 结果：", result); // 约2秒后预期输出：ASUM(2, 2) 结果：8
    })
    .catch(error => {
        console.error("计算错误：", error);
    });
// 结果：Promise{8}
```

## 单变量求解方法

您可以使用 [goalSeek ](gcdocsite__documentlink?toc-item-id=3db14618-6aaf-4198-b174-826a09082d17#goalSeek)方法来找到一个单元格的值，该值能在另一个单元格中产生所需的公式结果。

```JavaScript
/* 此示例展示了如何使用单变量求解。
贷款金额为 10000，贷款期限为 18 个月，每月还款 600，
计算为了实现贷款目标您需要确保的利率是多少 */
sheet.setValue(0, 1, 10000); // 贷款金额
sheet.setValue(1, 1, 18); // 贷款期限（月）
sheet.setFormatter(2, 1, '0%'); // 利率
sheet.setFormatter(3, 1, '0.00');
sheet.setFormula(3, 1, 'PMT(B3/12,B2,B1)'); // 还款金额
GC.Spread.Sheets.CalcEngine.goalSeek(sheet, 2, 1, sheet, 3, 1, -600); // B3 中的结果为 10%
```